fix bug 1057496 - Hide print link on tablet and under

--- a/media/redesign/stylus/wiki.styl
+++ b/media/redesign/stylus/wiki.styl
@@ -1317,7 +1317,7 @@ details {
         width: auto !important;
     }
 
-    #quick-links-toggle,  #wiki-controls {
+    #quick-links-toggle,  #wiki-controls, .page-print {
         display: none;
     }
 }
